이미지 수정

--- a/src/subject3/subject3.html
+++ b/src/subject3/subject3.html
@@ -53,8 +53,9 @@
             <img src="./assets/newslice_12_12.jpg" alt="" />
             <img src="./assets/newslice_13_13.jpg" alt="" />
             <img src="./assets/slice_01_01.jpg" alt="" />
-            <img src="./assets/slice_02_02.jpg" alt="" />
-            <img src="./assets/slice_03_03.jpg" alt="" />
+            <img src="./assets/newnewnew_02_02.jpg" alt="" />
+            <img src="./assets/newnewnew_03_03.jpg" alt="" />
+            <img src="./assets/newnewnew_04_04.jpg" alt="" />
             <img src="./assets/slice_04_04.jpg" alt="" />
             <img src="./assets/slice_05_05.jpg" alt="" />
             <iframe
