--- a/src/subject3/subject3.html
+++ b/src/subject3/subject3.html
@@ -93,21 +93,17 @@
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen></iframe>
-            <img src="./assets/newnew_01_01.jpg" alt="" />
-            <img src="./assets/newnew_02_02.jpg" alt="" />
-            <img src="./assets/newnew_03_03.jpg" alt="" />
+            <img src="./assets/uxuislice_01_01.jpg" alt="" />
+            <img src="./assets/uxuislice_02_02.jpg" alt="" />
+            <img src="./assets/uxuislice_03_03.jpg" alt="" />
             <img src="./assets/slice_12_12.jpg" alt="" />
             <img src="./assets/slice_13_13.jpg" alt="" />
             <img src="./assets/slice_14_14.jpg" alt="" />
             <img src="./assets/slice_15_15.jpg" alt="" />
             <img src="./assets/slice_16_16.jpg" alt="" />
             <img src="./assets/slice_17_17.jpg" alt="" />
-            <iframe
-              src="https://player.vimeo.com/video/870500357?h=38bef21fb3&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&background=1"
-              style="aspect-ratio: 640 / 444; width: 100%"
-              frameborder="0"
-              allow="autoplay; fullscreen; picture-in-picture"
-              allowfullscreen></iframe>
+            <img src="./assets/ending_01_01.jpg" alt="" />
+            <img src="./assets/ending_02_02.jpg" alt="" />
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
             <!-- 1개 파일의 용량을 1MB 이하로 하시오. -->
             <!-- 절대 1개 파일의 용량이 100MB를 넘지 않도록 하시오. 이를 어겨 발생하는 모든 문제는 학생이 알아서 해결하시오. -->
