--- a/src/subject2/subject2.html
+++ b/src/subject2/subject2.html
@@ -28,8 +28,8 @@
             <!-- 1개 파일의 용량을 1MB 이하로 하시오. -->
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
             <iframe
-              src="https://player.vimeo.com/video/870293088?h=9292741f3b&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&background=1"
-              style="aspect-ratio: 640 / 444; width: 100%"
+              src="https://player.vimeo.com/video/879086632?h=9d5febba99&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&background=1"
+              style="aspect-ratio: 640 / 378; width: 100%"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen></iframe>
@@ -46,8 +46,8 @@
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen></iframe>
             <iframe
-              src="https://player.vimeo.com/video/870303494?h=7a52ae83a7&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&background=1"
-              style="aspect-ratio: 640 / 444; width: 100%"
+              src="https://player.vimeo.com/video/879090360?h=6c368c6f2f&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&background=1"
+              style="aspect-ratio: 640 / 400; width: 100%"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen></iframe>
@@ -72,8 +72,9 @@
             <img src="./assets/slice_01.jpg" alt="" />
             <img src="./assets/slice_02.jpg" alt="" />
             <img src="./assets/slice_03.jpg" alt="" />
-            <img src="./assets/slice_04.jpg" alt="" />
-            <img src="./assets/slice_05.jpg" alt="" />
+            <img src="./assets/newslice_05_05.jpg" alt="" />
+            <img src="./assets/newslice_06_06.jpg" alt="" />
+            <img src="./assets/newslice_07_07.jpg" alt="" />
             <img src="./assets/slice_06.jpg" alt="" />
             <img src="./assets/slice_07.jpg" alt="" />
             <iframe
@@ -105,7 +106,9 @@
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen></iframe>
-            <img src="./assets/slice_13.jpg" alt="" />
+            <img src="./assets/new_slice_01.jpg" alt="" />
+            <img src="./assets/new_slice_02.jpg" alt="" />
+            <img src="./assets/new_slice_03.jpg" alt="" />
             <iframe
               src="https://player.vimeo.com/video/870356715?h=b45c8e6155&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&background=1"
               style="aspect-ratio: 640 / 444; width: 100%"
@@ -113,14 +116,12 @@
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen></iframe>
             <iframe
-              src="https://player.vimeo.com/video/870358724?h=5a840a6257&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&background=1"
+              src="https://player.vimeo.com/video/879097886?h=d74ce2f1d0&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&background=1"
               style="aspect-ratio: 640 / 444; width: 100%"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
               allowfullscreen></iframe>
-            <img src="./assets/new_slice_01.jpg" alt="" />
-            <img src="./assets/new_slice_02.jpg" alt="" />
-            <img src="./assets/new_slice_03.jpg" alt="" />
+            <img src="./assets/slice_13.jpg" alt="" />
             <iframe
               src="https://player.vimeo.com/video/870365115?h=c7f58096b1&autoplay=1&loop=1&title=0&byline=0&portrait=0&muted=1&background=1"
               style="aspect-ratio: 640 / 444; width: 100%"
